--- a/Final_Project_Report.Rmd
+++ b/Final_Project_Report.Rmd
@@ -83,7 +83,95 @@ __According to the CDC:__
 
 ## The pipeline for obtaining and cleaning the dataset
 
-## The exploratory analysis with a few featured infographics
+
+## Exploratory Analysis
+
+
+### Lyme Disease Changes from 1992-2011
+
+Although temperature And precipitation remained roughly the same, lyme disease had a steady increase from 1992-2011
+
+-- PUT DESCRIPTION HERE --
+
+__Averages cases__
+
+* 1992-96: 1186.78
+
+* 1997-01: 1611.50
+
+* 2002-06: 2158.64
+
+* 2007-11: 2658.22
+
+```{r message=FALSE, warning=FALSE, echo=FALSE}
+LymeTempPrec<- read_csv("./LymeTempPrec3.csv")
+means<-LymeTempPrec %>%
+  summarise_at(vars(-state, -full), funs(mean(., na.rm=TRUE)))
+means<- means %>%
+  pivot_longer(everything(),names_to = "Measure", values_to = "Average")
+avgLyme <- means %>% filter(str_detect(Measure, "^lyme"))
+
+avgLyme$Measure <- as.factor(avgLyme$Measure)
+avgLyme$Measure <- factor(avgLyme$Measure, levels = c("lyme9296", "lyme9701", "lyme0206", "lyme0711"))
+ggplot(avgLyme, aes(x=Measure, y=Average)) +
+  geom_bar(stat = "identity") + ggtitle("Average Lyme Disease Cases for Each Period")
+```
+
+__Average temperature__
+
+* 1992-96: 62.90
+
+* 1997-01: 63.94
+
+* 2002-06: 63.82
+
+* 2007-11: 63.27
+
+```{r message=FALSE, warning=FALSE, echo=FALSE}
+avgTemp <- means %>%
+  filter(str_detect(Measure, "^temp"))
+ggplot(data = avgTemp, aes(x=Measure, y=Average)) + geom_bar(stat = "identity") + ggtitle("Average Temperature for Each Period")
+```
+
+__Average precipitation__
+
+* 1992-96: 28.23
+
+* 1997-01: 26.37
+
+* 2002-06: 27.90
+
+* 2007-11: 28.70
+
+##Plotted average Prec
+```{r message=FALSE, warning=FALSE, echo=FALSE}
+avgPrec <- means %>%
+  filter(str_detect(Measure, "^prec"))
+ggplot(data = avgPrec, aes(x=Measure, y=Average)) + geom_bar(stat = "identity") + ggtitle("Average Precipitation for Each Period")
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     Temperature part: The change of average temperature in the U.S. and each states may affect the rate of Lymn disease.
     1. Average Temperature of 50 states over 20 years
@@ -124,7 +212,7 @@ ggplot(Temp3,aes(x=Year,y=Ave_Temp)) + geom_point(color="black") + stat_smooth(m
 
 ```{r message=FALSE, warning=FALSE, echo=FALSE}
 LymeTempPrec<- read_csv("./LymeTempPrec3.csv")
-head(LymeTempPrec)
+#head(LymeTempPrec)
 ```
 
 
@@ -133,7 +221,7 @@ Found averages
 ```{r message=FALSE, warning=FALSE, echo=FALSE}
 means<-LymeTempPrec %>%
   summarise_at(vars(-state, -full), funs(mean(., na.rm=TRUE)))
-head(means)
+#head(means)
 ```
 
 ##Pivoted the data
@@ -141,7 +229,7 @@ head(means)
 ```{r message=FALSE, warning=FALSE, echo=FALSE}
 means<- means %>%
   pivot_longer(everything(),names_to = "Measure", values_to = "Average")
-head(means)
+#head(means)
 ```
 ##Plotted average Lyme
 
@@ -183,13 +271,7 @@ ggplot(sumLyme, aes(x=Measure, y=Total, color = "darkblue")) +
 
 
 
-##Reordered the graphs to go in chronological order
-```{r message=FALSE, warning=FALSE, echo=FALSE}
-avgLyme$Measure <- as.factor(avgLyme$Measure)
-avgLyme$Measure <- factor(avgLyme$Measure, levels = c("lyme9296", "lyme9701", "lyme0206", "lyme0711"))
-ggplot(avgLyme, aes(x=Measure, y=Average)) +
-  geom_bar(stat = "identity")
-```
+
 ```{r message=FALSE, warning=FALSE, echo=FALSE}
 avgTemp$Measure <- as.factor(avgTemp$Measure)
 avgTemp$Measure <- factor(avgTemp$Measure, levels = c("temp9296", "temp9701", "temp0206", "temp0711"))
