--- a/Final_Project_Report.Rmd
+++ b/Final_Project_Report.Rmd
@@ -143,6 +143,7 @@ __Average precipitation__
 
 * 2007-11: 28.70
 
+##Plotted average Prec
 ```{r message=FALSE, warning=FALSE, echo=FALSE}
 avgPrec <- means %>%
   filter(str_detect(Measure, "^prec"))
@@ -223,26 +224,31 @@ means<-LymeTempPrec %>%
 #head(means)
 ```
 
-##Pivoted the data
+##Pivoted the data to make it easier to work with
 
 ```{r message=FALSE, warning=FALSE, echo=FALSE}
 means<- means %>%
   pivot_longer(everything(),names_to = "Measure", values_to = "Average")
 #head(means)
 ```
-##Plotted average Lyme
+##Plotted average Lyme nationwide for each 5 year block.
+##Steady increase of about 500 more new cases each 5 years
 
 ```{r message=FALSE, warning=FALSE, echo=FALSE}
 avgLyme <- means %>% filter(str_detect(Measure, "^lyme"))
 ggplot(data = avgLyme, aes(x=Measure, y=Average)) + geom_bar(stat = "identity")
 ```
-##Plotted average Temperature
+##Plotted average Temperature nationwide for each 5 year block.
+##Remained roughly the same
+
 ```{r message=FALSE, warning=FALSE, echo=FALSE}
 avgTemp <- means %>%
   filter(str_detect(Measure, "^temp"))
 ggplot(data = avgTemp, aes(x=Measure, y=Average)) + geom_bar(stat = "identity")
 ```
-##Plotted average Prec
+##Plotted average Prec nationwide for each 5 year block.
+##Remained roughly the same
+
 ```{r message=FALSE, warning=FALSE, echo=FALSE}
 avgPrec <- means %>%
   filter(str_detect(Measure, "^prec"))
@@ -255,12 +261,14 @@ sums<-LymeTempPrec %>%
 sums<- sums %>%
   pivot_longer(everything(),names_to = "Measure", values_to = "Total")
 ```
-
+##Found that the number of new cases being found in each 5 year block grew each time.
 ```{r message=FALSE, warning=FALSE, echo=FALSE}
 sumLyme <- sums %>% filter(str_detect(Measure, "^lyme"))
 ggplot(data = sumLyme, aes(x=Measure, y=Total)) + geom_bar(stat = "identity")
 ```
 
+
+##Reordered the graphs to be in chronological order making it easier to read and understand the information.
 ```{r message=FALSE, warning=FALSE, echo=FALSE}
 sumLyme$Measure <- as.factor(avgLyme$Measure)
 sumLyme$Measure <- factor(sumLyme$Measure, levels = c("lyme9296", "lyme9701", "lyme0206", "lyme0711"))
@@ -269,14 +277,14 @@ ggplot(sumLyme, aes(x=Measure, y=Total, color = "darkblue")) +
 ```
 
 
-
-
+##Reordered
 ```{r message=FALSE, warning=FALSE, echo=FALSE}
 avgTemp$Measure <- as.factor(avgTemp$Measure)
 avgTemp$Measure <- factor(avgTemp$Measure, levels = c("temp9296", "temp9701", "temp0206", "temp0711"))
 ggplot(avgTemp, aes(x=Measure, y=Average)) +
   geom_bar(stat = "identity")
 ```
+##Reordered
 ```{r message=FALSE, warning=FALSE, echo=FALSE}
 avgPrec$Measure <- as.factor(avgPrec$Measure)
 avgPrec$Measure <- factor(avgPrec$Measure, levels = c("prec9296", "prec9701", "prec0206", "prec0711"))
@@ -295,6 +303,8 @@ new$date<-substr(new$measure, nchar(new$measure) - 3, nchar(new$measure))
 new$measure <- substr(new$measure, 1, 4)
 head(new)
 ```
+##Scatterplot showing the temperatures when the most cases occur
+##Found that most cases occur at around 60 degrees
 
 ```{r message=FALSE, warning=FALSE, echo=FALSE}
 new <- new %>%
