--- a/Final_Project_Report.Rmd
+++ b/Final_Project_Report.Rmd
@@ -27,7 +27,7 @@ setwd(getwd())
 
   * We chose lyme disease and weather data sets because it is known that lyme disease is carried by ticks. There may be some correlation between the disease and weather patterns such as precipitation since tick are exposed to the weather given their habitat and it could have an effect on the ticks population each year.
   
-  
+***
 
 ### Lyme Disease Background
 
@@ -45,6 +45,7 @@ __According to the CDC:__
 
 * Symptoms can include flu like symptoms as well as a bulls eye like rash
 
+***
 
 ### Data Sets
 
@@ -81,14 +82,11 @@ __According to the CDC:__
                 5. What changes have happened to the average temperature?
                 6. Is there any association with the rate of Lyme disease and the changes to precipitation?
                     
+***
 
 ## The pipeline for obtaining and cleaning the dataset
 
-
-
-
-
-
+***
 
 ## Exploratory Analysis
 
@@ -179,8 +177,7 @@ ggplot(sumLyme, aes(x=Measure, y=Total)) +
   geom_bar(stat = "identity") + ggtitle("Total Number of Cases for Each Year")
 ```
 
-
-
+***
 
 ### Lyme Disease Affected States
 
@@ -235,7 +232,7 @@ LDdataG <- LDdataG %>% pivot_longer(names_to = "ConfirmedCount", values_to = "Co
 ```
 
 
-__Cases from 1992-1996__
+#### __Cases from 1992-1996__
 
 * New York had the most amount of lyme disease cases with 21,205 cases.
 
@@ -245,7 +242,7 @@ __Cases from 1992-1996__
 ```
 
 
-__Cases from 1997-2001__
+#### __Cases from 1997-2001__
 
 * New York had the most amount of lyme disease cases and ended up with slightly few cases at 20,781.
 
@@ -260,7 +257,7 @@ __Cases from 1997-2001__
 ```
 
 
-__Cases from 2002-2006__
+#### __Cases from 2002-2006__
 
 * New York had the most amount of lyme disease cases with 26,059 cases.
 
@@ -273,7 +270,7 @@ __Cases from 2002-2006__
 ```
 
 
-__Cases from 2007-2011__
+#### __Cases from 2007-2011__
 
 * Pennsylvania had the most amount of lyme disease cases with 20,799 cases.
 
@@ -285,8 +282,7 @@ __Cases from 2007-2011__
     LDdataG %>% filter(ConfirmedCount == "ConfirmedCount_2007_2011") %>% ggplot(aes(x = StateName, y = Count)) + geom_bar(position = 'dodge', stat='identity') + theme(axis.text.x=element_text(angle = -90, vjust = 0.5)) + ggtitle("Confirmed Cases from 2007-2011") + geom_text(aes(label=Count), position=position_dodge(width=0.9), vjust=-0.25, size = 2)
 ```
 
-
-
+***
 
 
 
@@ -364,12 +360,7 @@ LymeTempPrec<- read_csv("LymeTempPrec3.csv")
 
 ```{r message=FALSE, warning=FALSE, echo=FALSE}
 LymeTempPrec<- read_csv("./LymeTempPrec3.csv")
-<<<<<<< HEAD
-
-head(LymeTempPrec)
-=======
 #head(LymeTempPrec)
->>>>>>> dec8f92507c9eaa5fdd8cb5090a794c482f665e1
 ```
 
 
@@ -384,18 +375,7 @@ means<-LymeTempPrec %>%
 #head(means)
 ```
 
-<<<<<<< HEAD
-<<<<<<< HEAD
-    Pivoted the data
-
-```{r message=FALSE, warning=FALSE, echo=FALSE}
-library(tidyr)
-```
-
-##Pivoted the data
-=======
 ##Pivoted the data to make it easier to work with
->>>>>>> dec8f92507c9eaa5fdd8cb5090a794c482f665e1
 
 ```{r message=FALSE, warning=FALSE, echo=FALSE}
 
@@ -403,7 +383,6 @@ means<- means %>%
   pivot_longer(everything(),names_to = "Measure", values_to = "Average")
 #head(means)
 ```
-<<<<<<< HEAD
 
     
     Plotted average Lyme
@@ -415,37 +394,26 @@ ggplot(data = avgLyme, aes(x=Measure, y=Average)) + geom_bar(stat = "identity")
 ```
 
 
-##Plotted average Lyme
-=======
 ##Plotted average Lyme nationwide for each 5 year block.
 ##Steady increase of about 500 more new cases each 5 years
->>>>>>> dec8f92507c9eaa5fdd8cb5090a794c482f665e1
 
 ```{r message=FALSE, warning=FALSE, echo=FALSE}
 avgLyme <- means %>% filter(str_detect(Measure, "^lyme"))
 ggplot(data = avgLyme, aes(x=Measure, y=Average)) + geom_bar(stat = "identity")
 ```
-<<<<<<< HEAD
 
-##Plotted average Temperature
-=======
 ##Plotted average Temperature nationwide for each 5 year block.
 ##Remained roughly the same
->>>>>>> dec8f92507c9eaa5fdd8cb5090a794c482f665e1
 
 ```{r message=FALSE, warning=FALSE, echo=FALSE}
 avgTemp <- means %>%
   filter(str_detect(Measure, "^temp"))
 ggplot(data = avgTemp, aes(x=Measure, y=Average)) + geom_bar(stat = "identity")
 ```
-<<<<<<< HEAD
 
 
-##Plotted average Prec
-=======
 ##Plotted average Prec nationwide for each 5 year block.
 ##Remained roughly the same
->>>>>>> dec8f92507c9eaa5fdd8cb5090a794c482f665e1
 
 ```{r message=FALSE, warning=FALSE, echo=FALSE}
 avgPrec <- means %>%
@@ -471,20 +439,14 @@ ggplot(data = sumLyme, aes(x=Measure, y=Total)) + geom_bar(stat = "identity")
 ```
 
 
-<<<<<<< HEAD
-
-=======
 ##Reordered the graphs to be in chronological order making it easier to read and understand the information.
->>>>>>> dec8f92507c9eaa5fdd8cb5090a794c482f665e1
+
 ```{r message=FALSE, warning=FALSE, echo=FALSE}
 sumLyme$Measure <- as.factor(avgLyme$Measure)
 sumLyme$Measure <- factor(sumLyme$Measure, levels = c("lyme9296", "lyme9701", "lyme0206", "lyme0711"))
 ggplot(sumLyme, aes(x=Measure, y=Total, color = "darkblue")) +
   geom_bar(stat = "identity")
 ```
-
-
-<<<<<<< HEAD
 
 
 
@@ -497,15 +459,15 @@ avgLyme$Measure <- factor(avgLyme$Measure, levels = c("lyme9296", "lyme9701", "l
 ggplot(avgLyme, aes(x=Measure, y=Average)) +
   geom_bar(stat = "identity")
 ```
-=======
+
 ##Reordered
->>>>>>> dec8f92507c9eaa5fdd8cb5090a794c482f665e1
 ```{r message=FALSE, warning=FALSE, echo=FALSE}
 avgTemp$Measure <- as.factor(avgTemp$Measure)
 avgTemp$Measure <- factor(avgTemp$Measure, levels = c("temp9296", "temp9701", "temp0206", "temp0711"))
 ggplot(avgTemp, aes(x=Measure, y=Average)) +
   geom_bar(stat = "identity")
 ```
+
 ##Reordered
 ```{r message=FALSE, warning=FALSE, echo=FALSE}
 avgPrec$Measure <- as.factor(avgPrec$Measure)
@@ -534,10 +496,7 @@ new <- new %>%
 head(new)
 ```
 
-    
-    Lyme disease typically happens around the 60 degrees range. cleaned for better format for the chart.
-    
-=======
+
 ## Lyme disease typically happens around the 60 degrees range. cleaned for better format for the chart.
 
 ```{r message=FALSE, warning=FALSE, echo=FALSE}
@@ -548,14 +507,10 @@ new %>%
 
 ## Scatterplot to show what temperatures the most cases occur at
 
-<<<<<<< HEAD
-
 ## Answers to the questions raised
 
 ## Conclusion
 
-=======
->>>>>>> ce00f3bbc2282f14f662fa252d251da61cdbd7dd
 ## Grahps for temperature and number of lyme dieases cases
 
 ```{r message=FALSE, warning=FALSE, echo=FALSE}
