--- a/Final_Project_Report.Rmd
+++ b/Final_Project_Report.Rmd
@@ -94,8 +94,6 @@ __According to the CDC:__
 
 Although temperature And precipitation remained roughly the same, lyme disease had a steady increase from 1992-2011
 
--- PUT DESCRIPTION HERE --
-
 __Averages cases__
 
 * 1992-96: 1186.78
@@ -183,7 +181,7 @@ ggplot(sumLyme, aes(x=Measure, y=Total)) +
 
 Here we can look at which states were most affected by Lyme disease.
 
-From the maps below we can start to see that the upper right region of the US has a high amount of cases
+From the maps below we can start to see that the upper right region of the US has a high amount of cases and as we move from 1999 to 2011 the disease is spreading towards the northern central states.
 
 ```{r, warning=FALSE, message=FALSE, echo=FALSE}
 #---Get And Clean Data---
@@ -283,6 +281,113 @@ LDdataG <- LDdataG %>% pivot_longer(names_to = "ConfirmedCount", values_to = "Co
 ```
 
 ***
+
+### Lyme Disease Affected Region from 2007-2011
+
+We can see that the distribution of lyme disease is mainly around the Mid Atlantic and New England region. These regions are part of the north eastern part of the US. This finding matches with the map data shown previously.
+
+```{r message=FALSE, warning=FALSE, echo=FALSE}
+#stack bar for region
+region <- read.csv("cumLymeReport_2007_2011_byRegion.csv")
+region <- region %>%
+  mutate(area=ï..Areas) %>%
+  select(!ï..Areas)
+
+regionpiv <- region %>%
+  pivot_longer(!area, names_to="cumu", values_to="value")
+#str(regionpiv)
+
+regionpiv %>%
+  ggplot(aes(fill=cumu, y=value, x=reorder(area, value))) + 
+    geom_bar(position="stack", stat="identity") + coord_flip() + labs(title="52-week Cumulative of Lyme Disease cases by US Region", y="Total cases", x="Region") + scale_fill_discrete(name = "Cumulative cases per year", labels = c("2007", "2008", "2009", "2010", "2011"))
+```
+
+* States that are affected are align with the CDC region data
+
+* States are mostly located northeast or north of the Midwest
+
+```{r message=FALSE, warning=FALSE, echo=FALSE}
+#for state
+USA_states <- map_data("state")
+sName <- USA_states %>%
+  mutate(region=str_to_title(USA_states$region))
+
+temp2 <- read.csv("LymeTempPrec2.csv")
+ltp <- temp2 %>%
+  mutate(region=full) %>%
+  select(!c('full'))
+
+ltp2 <- ltp %>%
+  filter(lyme0711>1000)
+
+ltpmap <- ltp %>% left_join(sName, by="region")
+ltp2map <- ltp2 %>% left_join(sName, by="region")
+sText <- ltp2map %>% group_by(region, state) %>% summarise(long=mean(long), lat=mean(lat))
+  
+ggplot() + geom_path(data=ltpmap,
+                        aes(x=long, y=lat, group=group)) +
+  geom_polygon(data=ltp2map,
+                aes(x=long, y=lat, group=group, fill=lyme0711)) +
+  scale_fill_continuous(low='tomato', high='darkred', guide='colorbar') +
+  coord_map() +
+  geom_text(data=sText, 
+            aes(x=long, y=lat, label=state), color='black') +
+  labs(title="US States With > 1000 Cases", fill="Total Cases")
+```
+
+* Counties in the Northeast are located close to the ocean
+
+* Counties in North Central Midwest are mostly located on the state capital where most people are located
+
+* Same can be said with Northeast states, places with high population
+
+```{r message=FALSE, warning=FALSE, echo=FALSE}
+#for county
+
+USA_counties <- map_data("county")
+cName <- USA_counties %>%
+  mutate(subregion=str_to_title(subregion))
+
+count1 <- read.csv("Data Sets/LymeDisease_9211_county (1).csv")
+countClean <- count1 %>% 
+  separate(CountyName, c("subregion", "county")) %>%
+  filter(!CountyCode==0) %>%
+  mutate(county=str_replace(county, "County", "")) %>%
+  unite('subregion',subregion:county,sep=" ") %>%
+  mutate(subregion=trimws(gsub("\\s+", " ", subregion))) %>%
+  mutate(c711=replace_na(ConfirmedCount_2007_2011, 0))
+
+countCleanSum <- countClean %>%
+  group_by(subregion) %>%
+  summarise(c711=sum(c711)) %>%
+  arrange(desc(c711))
+
+countCleanMap <- countCleanSum %>% 
+  left_join(cName, by='subregion') %>% 
+  filter(c711>100)
+
+countCleanMap <- countCleanMap %>%
+  filter(region %in% c('minnesota', 'wisconsin', 'virginia', 'maryland', 'pennsylvania', 'new jersey', 'new york', 'connecticut', 'massachusetts', 'maine', 'vermont', 'new hampshire', 'delaware'))
+
+ggplot() + geom_path(data=ltp2map,
+                        aes(x=long, y=lat, group=group)) +
+  geom_polygon(data=countCleanMap,
+                aes(x=long, y=lat, group=group, fill=c711), color='black') +
+  scale_fill_continuous(low='tomato', high='darkred', guide='colorbar') +
+  coord_map() +
+  labs(title="US Counties With > 100 Cases In The Northeast Central Region", fill="Total cases")
+
+```
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -557,87 +662,7 @@ ggplot(honk, aes(x = state, weight = temp9701)) + geom_bar() + coord_flip() + yl
 
 
 
-* Which states have the highest rate of Lyme Disease?
 
-```{r message=FALSE, warning=FALSE, echo=FALSE}
-#stack bar for region
-region <- read.csv("cumLymeReport_2007_2011_byRegion.csv")
-region <- region %>%
-  mutate(area=ï..Areas) %>%
-  select(!ï..Areas)
-
-regionpiv <- region %>%
-  pivot_longer(!area, names_to="cumu", values_to="value")
-#str(regionpiv)
-
-regionpiv %>%
-  ggplot(aes(fill=cumu, y=value, x=reorder(area, value))) + 
-    geom_bar(position="stack", stat="identity") + coord_flip() + labs(title="52-week Cumulative of Lyme Disease cases by US Region", y="Total cases", x="Region") + scale_fill_discrete(name = "Cumulative cases per year", labels = c("2007", "2008", "2009", "2010", "2011"))
-
-#for state
-USA_states <- map_data("state")
-sName <- USA_states %>%
-  mutate(region=str_to_title(USA_states$region))
-
-temp2 <- read.csv("LymeTempPrec2.csv")
-ltp <- temp2 %>%
-  mutate(region=full) %>%
-  select(!c('full'))
-
-ltp2 <- ltp %>%
-  filter(lyme0711>1000)
-
-ltpmap <- ltp %>% left_join(sName, by="region")
-ltp2map <- ltp2 %>% left_join(sName, by="region")
-sText <- ltp2map %>% group_by(region, state) %>% summarise(long=mean(long), lat=mean(lat))
-  
-ggplot() + geom_path(data=ltpmap,
-                        aes(x=long, y=lat, group=group)) +
-  geom_polygon(data=ltp2map,
-                aes(x=long, y=lat, group=group, fill=lyme0711)) +
-  scale_fill_continuous(low='tomato', high='darkred', guide='colorbar') +
-  coord_map() +
-  geom_text(data=sText, 
-            aes(x=long, y=lat, label=state), color='black') +
-  labs(title="US States With > 1000 Cases", fill="Total Cases")
-
-#for county
-
-USA_counties <- map_data("county")
-cName <- USA_counties %>%
-  mutate(subregion=str_to_title(subregion))
-
-count1 <- read.csv("Data Sets/LymeDisease_9211_county (1).csv")
-countClean <- count1 %>% 
-  separate(CountyName, c("subregion", "county")) %>%
-  filter(!CountyCode==0) %>%
-  mutate(county=str_replace(county, "County", "")) %>%
-  unite('subregion',subregion:county,sep=" ") %>%
-  mutate(subregion=trimws(gsub("\\s+", " ", subregion))) %>%
-  mutate(c711=replace_na(ConfirmedCount_2007_2011, 0))
-
-countCleanSum <- countClean %>%
-  group_by(subregion) %>%
-  summarise(c711=sum(c711)) %>%
-  arrange(desc(c711))
-
-countCleanMap <- countCleanSum %>% 
-  left_join(cName, by='subregion') %>% 
-  filter(c711>100)
-
-countCleanMap <- countCleanMap %>%
-  filter(region %in% c('minnesota', 'wisconsin', 'virginia', 'maryland', 'pennsylvania', 'new jersey', 'new york', 'connecticut', 'massachusetts', 'maine', 'vermont', 'new hampshire', 'delaware'))
-
-ggplot() + geom_path(data=ltp2map,
-                        aes(x=long, y=lat, group=group)) +
-  geom_polygon(data=countCleanMap,
-                aes(x=long, y=lat, group=group, fill=c711), color='black') +
-  scale_fill_continuous(low='tomato', high='darkred', guide='colorbar') +
-  coord_map() +
-  labs(title="US Counties With > 100 Cases In The Northeast Central Region", fill="Total cases")
-
-
-```
 
   
 * Does the Lyme Disease rate in the states influenced by the weather?
