--- a/Final_Project_Report.Rmd
+++ b/Final_Project_Report.Rmd
@@ -94,6 +94,8 @@ __According to the CDC:__
 
 Although temperature And precipitation remained roughly the same, lyme disease had a steady increase from 1992-2011
 
+There is a steady increase of about 500 more new cases each 5 years.
+
 __Averages cases__
 
 * 1992-96: 1186.78
@@ -116,38 +118,6 @@ avgLyme$Measure <- as.factor(avgLyme$Measure)
 avgLyme$Measure <- factor(avgLyme$Measure, levels = c("lyme9296", "lyme9701", "lyme0206", "lyme0711"))
 ggplot(avgLyme, aes(x=Measure, y=Average)) +
   geom_bar(stat = "identity") + ggtitle("Average Lyme Disease Cases for Each Period")
-```
-
-__Average temperature__
-
-* 1992-96: 62.90
-
-* 1997-01: 63.94
-
-* 2002-06: 63.82
-
-* 2007-11: 63.27
-
-```{r message=FALSE, warning=FALSE, echo=FALSE}
-avgTemp <- means %>%
-  filter(str_detect(Measure, "^temp"))
-ggplot(data = avgTemp, aes(x=Measure, y=Average)) + geom_bar(stat = "identity") + ggtitle("Average Temperature for Each Period")
-```
-
-__Average precipitation__
-
-* 1992-96: 28.23
-
-* 1997-01: 26.37
-
-* 2002-06: 27.90
-
-* 2007-11: 28.70
-
-```{r message=FALSE, warning=FALSE, echo=FALSE}
-avgPrec <- means %>%
-  filter(str_detect(Measure, "^prec"))
-ggplot(data = avgPrec, aes(x=Measure, y=Average)) + geom_bar(stat = "identity") + ggtitle("Average Precipitation for Each Period")
 ```
 
 __Total number of cases__
@@ -173,6 +143,42 @@ sumLyme$Measure <- as.factor(avgLyme$Measure)
 sumLyme$Measure <- factor(sumLyme$Measure, levels = c("lyme9296", "lyme9701", "lyme0206", "lyme0711"))
 ggplot(sumLyme, aes(x=Measure, y=Total)) +
   geom_bar(stat = "identity") + ggtitle("Total Number of Cases for Each Year")
+```
+
+The average temperature nationwide for each 5 year block remained roughly the same
+
+__Average temperature__
+
+* 1992-96: 62.90
+
+* 1997-01: 63.94
+
+* 2002-06: 63.82
+
+* 2007-11: 63.27
+
+```{r message=FALSE, warning=FALSE, echo=FALSE}
+avgTemp <- means %>%
+  filter(str_detect(Measure, "^temp"))
+ggplot(data = avgTemp, aes(x=Measure, y=Average)) + geom_bar(stat = "identity") + ggtitle("Average Temperature for Each Period")
+```
+
+The average precipitation nationwide for each 5 year block remained roughly the same
+
+__Average precipitation__
+
+* 1992-96: 28.23
+
+* 1997-01: 26.37
+
+* 2002-06: 27.90
+
+* 2007-11: 28.70
+
+```{r message=FALSE, warning=FALSE, echo=FALSE}
+avgPrec <- means %>%
+  filter(str_detect(Measure, "^prec"))
+ggplot(data = avgPrec, aes(x=Measure, y=Average)) + geom_bar(stat = "identity") + ggtitle("Average Precipitation for Each Period")
 ```
 
 ***
@@ -517,139 +523,6 @@ We found that between 55-65 fahrenheit are where most of the lyme disease cases 
 
 
 
-
-
-
-
-
-
-
-
-```{r message=FALSE, warning=FALSE, echo=FALSE}
-library(readr)
-library(ggplot2)
-LymeTempPrec<- read_csv("LymeTempPrec3.csv")
-```
-```{r message=FALSE, warning=FALSE, echo=FALSE}
-LymeTempPrec<- read_csv("./LymeTempPrec3.csv")
-#head(LymeTempPrec)
-```
-
-    Found averages
-
-```{r message=FALSE, warning=FALSE, echo=FALSE}
-
-library(dplyr)
-
-means<-LymeTempPrec %>%
-  summarise_at(vars(-state, -full), funs(mean(., na.rm=TRUE)))
-#head(means)
-```
-
-##Pivoted the data to make it easier to work with
-
-```{r message=FALSE, warning=FALSE, echo=FALSE}
-
-means<- means %>%
-  pivot_longer(everything(),names_to = "Measure", values_to = "Average")
-#head(means)
-```
-
-    
-    Plotted average Lyme
-
-```{r message=FALSE, warning=FALSE, echo=FALSE}
-library(stringr)
-avgLyme <- means %>% filter(str_detect(Measure, "^lyme"))
-ggplot(data = avgLyme, aes(x=Measure, y=Average)) + geom_bar(stat = "identity")
-```
-
-
-##Plotted average Lyme nationwide for each 5 year block.
-##Steady increase of about 500 more new cases each 5 years
-
-```{r message=FALSE, warning=FALSE, echo=FALSE}
-avgLyme <- means %>% filter(str_detect(Measure, "^lyme"))
-ggplot(data = avgLyme, aes(x=Measure, y=Average)) + geom_bar(stat = "identity")
-```
-
-##Plotted average Temperature nationwide for each 5 year block.
-##Remained roughly the same
-
-```{r message=FALSE, warning=FALSE, echo=FALSE}
-avgTemp <- means %>%
-  filter(str_detect(Measure, "^temp"))
-ggplot(data = avgTemp, aes(x=Measure, y=Average)) + geom_bar(stat = "identity")
-```
-
-
-##Plotted average Prec nationwide for each 5 year block.
-##Remained roughly the same
-
-```{r message=FALSE, warning=FALSE, echo=FALSE}
-avgPrec <- means %>%
-  filter(str_detect(Measure, "^prec"))
-ggplot(data = avgPrec, aes(x=Measure, y=Average)) + geom_bar(stat = "identity")
-```
-
-    Found sums
-    
-
-##Found sums
-
-```{r message=FALSE, warning=FALSE, echo=FALSE}
-sums<-LymeTempPrec %>%
-  summarise_at(vars(-state, -full), funs(sum(., na.rm=TRUE)))
-sums<- sums %>%
-  pivot_longer(everything(),names_to = "Measure", values_to = "Total")
-```
-##Found that the number of new cases being found in each 5 year block grew each time.
-```{r message=FALSE, warning=FALSE, echo=FALSE}
-sumLyme <- sums %>% filter(str_detect(Measure, "^lyme"))
-ggplot(data = sumLyme, aes(x=Measure, y=Total)) + geom_bar(stat = "identity")
-```
-
-
-##Reordered the graphs to be in chronological order making it easier to read and understand the information.
-
-```{r message=FALSE, warning=FALSE, echo=FALSE}
-sumLyme$Measure <- as.factor(avgLyme$Measure)
-sumLyme$Measure <- factor(sumLyme$Measure, levels = c("lyme9296", "lyme9701", "lyme0206", "lyme0711"))
-ggplot(sumLyme, aes(x=Measure, y=Total, color = "darkblue")) +
-  geom_bar(stat = "identity")
-```
-
-
-
-
-##Reordered the graphs to go in chronological order
-
-```{r message=FALSE, warning=FALSE, echo=FALSE}
-avgLyme$Measure <- as.factor(avgLyme$Measure)
-avgLyme$Measure <- factor(avgLyme$Measure, levels = c("lyme9296", "lyme9701", "lyme0206", "lyme0711"))
-ggplot(avgLyme, aes(x=Measure, y=Average)) +
-  geom_bar(stat = "identity")
-```
-
-##Reordered
-```{r message=FALSE, warning=FALSE, echo=FALSE}
-avgTemp$Measure <- as.factor(avgTemp$Measure)
-avgTemp$Measure <- factor(avgTemp$Measure, levels = c("temp9296", "temp9701", "temp0206", "temp0711"))
-ggplot(avgTemp, aes(x=Measure, y=Average)) +
-  geom_bar(stat = "identity")
-```
-
-##Reordered
-```{r message=FALSE, warning=FALSE, echo=FALSE}
-avgPrec$Measure <- as.factor(avgPrec$Measure)
-avgPrec$Measure <- factor(avgPrec$Measure, levels = c("prec9296", "prec9701", "prec0206", "prec0711"))
-ggplot(avgPrec, aes(x=Measure, y=Average)) +
-  geom_bar(stat = "identity")
-```
-
-
-
-
 ## Scatterplot to show what temperatures the most cases occur at
 
 ## Answers to the questions raised
@@ -657,16 +530,6 @@ ggplot(avgPrec, aes(x=Measure, y=Average)) +
 ## Conclusion
 
 ## Grahps for temperature and number of lyme dieases cases
-
-
-
-#We found that between 55-65 farenheit are where most of the lyme disease cases start to peak. We modeled lyme disease cases verus temperature throughout the yers 1992-2011. The pattern was consistent through the years the the avg temperaute of 60 f was very dangerous due to the amount of high cases of lyme disease.
-
-
-
-
-
-
   
 * Does the Lyme Disease rate in the states influenced by the weather?
 
